# advent_of_code

./: Cargo.toml  README.md
2015/: Cargo.toml
2015/src/: lib.rs
2018/: Cargo.toml
2019/: Cargo.toml
2020/: Cargo.toml
2022/: Cargo.toml
2023/rust/: Cargo.toml  benchmarks.txt  justfile
2023/rust/day-01/benches/: benchmarks.rs
2023/rust/day-01/src/: part_1.rs  part_2.rs
2023/rust/day-02/: Cargo.toml
2023/rust/day-02/benches/: benchmarks.rs
2023/rust/day-02/src/: part_1.rs  part_2.rs
2023/rust/day-03/: Cargo.toml
2023/rust/day-03/benches/: benchmarks.rs
2023/rust/day-03/src/: part_1.rs  part_2.rs
2023/rust/day-04/: Cargo.toml
2023/rust/day-04/benches/: benchmarks.rs
2023/rust/day-04/src/: part_1.rs  part_2.rs
2023/rust/template/benches/: benchmarks.rs
2023/rust/template/src/: part_1.rs  part_2.rs
2024/gleam/day_01/: README.md  gleam.toml  manifest.toml
2024/gleam/day_01/src/: day_01.gleam
2024/gleam/day_01/test/: day_01_test.gleam
2025/rust/: Cargo.toml
2025/rust/day-01/: Cargo.toml
2025/rust/day-01/benches/: benchmarks.rs
2025/rust/day-01/src/: error.rs  lib.rs  part_1.rs  part_2.rs
2025/rust/day-02/benches/: benchmarks.rs
2025/rust/day-02/src/: lib.rs  part_1.rs  part_2.rs
2025/rust/day-03/: Cargo.toml
2025/rust/day-03/benches/: benchmarks.rs
2025/rust/day-03/src/: part_1.rs  part_2.rs
2025/rust/template/: Cargo.toml
2025/rust/template/benches/: benchmarks.rs
2025/rust/template/src/: lib.rs
advent_2015/: Cargo.toml
advent_2018/: Cargo.toml
advent_2019/: Cargo.toml
