[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "day-03"
path = "benches/benchmarks.rs"
harness = false


[dev-dependencies]
divan = { workspace = true }

[dependencies]
itertools = "0.14.0"
rayon = "1.11.0"
